@@ -4,6 +4,7 @@
  * GEOS - Geometry Engine Open Source
  * http://geos.refractions.net
  *
+ * Copyright (C) 2006      Refractions Research Inc.
  * Copyright (C) 2001-2002 Vivid Solutions Inc.
  *
  * This is free software; you can redistribute and/or modify it under
@@ -12,7 +13,46 @@
  * See the COPYING file for more information.
  *
  **********************************************************************
+ *
+ **********************************************************************/
+
+#include <geos/geomgraph.h>
+#include <geos/geom.h>
+#include <geos/geosAlgorithm.h>
+#include <geos/noding.h>
+
+namespace geos {
+
+vector<SegmentString*>&
+EdgeNodingValidator::toSegmentStrings(vector<Edge*> *edges)
+{
+	// convert Edges to SegmentStrings
+	for(unsigned int i=0, n=edges->size(); i<n; i++) {
+		Edge *e=(*edges)[i];
+		segStr.push_back(new SegmentString(e->getCoordinates(),e));
+	}
+	return segStr;
+}
+
+EdgeNodingValidator::~EdgeNodingValidator()
+{
+	for (SegmentString::NonConstVect::iterator
+			i=segStr.begin(), e=segStr.end();
+			i != e;
+			++i)
+	{
+		delete *i;
+	}
+}
+
+} // namespace geos
+
+/**********************************************************************
  * $Log$
+ * Revision 1.4  2006/02/15 17:19:18  strk
+ * NodingValidator synced with JTS-1.7, added CoordinateSequence::operator[]
+ * and size() to easy port maintainance.
+ *
  * Revision 1.3  2004/07/02 13:28:26  strk
  * Fixed all #include lines to reflect headers layout change.
  * Added client application build tips in README.
@@ -26,38 +66,3 @@
  *
  **********************************************************************/
 
-
-#include <geos/geomgraph.h>
-#include <geos/geom.h>
-#include <geos/geosAlgorithm.h>
-#include <geos/noding.h>
-namespace geos {
-/**
- * Validates that a collection of SegmentStrings is correctly noded.
- * Throws an appropriate exception if an noding error is found.
- *
- * @version 1.4
- */
-vector<SegmentString*>* EdgeNodingValidator::toSegmentStrings(vector<Edge*> *edges) {
-	// convert Edges to SegmentStrings
-    vector<SegmentString*> *segStrings=new vector<SegmentString*>();
-	for(int i=0;i<(int)edges->size();i++) {
-		Edge *e=(*edges)[i];
-		segStrings->push_back(new SegmentString(e->getCoordinates(),e));
-    }
-    return segStrings;
-}
-
-EdgeNodingValidator::EdgeNodingValidator(vector<Edge*> *edges) {
-	nv=new NodingValidator(toSegmentStrings(edges));
-}
-
-EdgeNodingValidator::~EdgeNodingValidator() {
-	delete nv;
-}
-
-void EdgeNodingValidator::checkValid() {
-	nv->checkValid();
-}
-
-}
